@@ -34,7 +34,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\" $OpenBSD: sshd.8,v 1.178 2002/04/22 16:16:53 markus Exp $
+.\" $OpenBSD: sshd.8,v 1.179 2002/05/04 02:39:35 deraadt Exp $
 .Dd September 25, 1999
 .Dt SSHD 8
 .Os
@@ -852,7 +852,7 @@ another process will be created that has the privilege of the authenticated
 user.  The goal of privilege separation is to prevent privilege
 escalation by containing any corruption within the unprivileged processes.
 The default is
-.Dq no .
+.Dq yes .
 .It Cm VerifyReverseMapping
 Specifies whether
 .Nm
