@@ -1,4 +1,4 @@
-#	$OpenBSD: sshd_config,v 1.51 2002/04/22 16:16:53 markus Exp $
+#	$OpenBSD: sshd_config,v 1.52 2002/05/04 02:39:35 deraadt Exp $
 
 # This is the sshd server system-wide configuration file.  See sshd(8)
 # for more information.
@@ -80,7 +80,7 @@
 #PrintLastLog yes
 #KeepAlive yes
 #UseLogin no
-#UsePrivilegeSeparation no
+#UsePrivilegeSeparation yes
 
 #MaxStartups 10
 # no default banner path
